<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us" />

            <TextView
                style="@style/p"
                android:text="@string/about_us_" />

            <TextView
                android:id="@+id/about_gp_email"
                style="@style/p_link_email"
                android:text="@string/about_us_gp_email" />

            <TextView
                style="@style/h2"
                android:text="@string/about_stego" />

            <TextView
                style="@style/p"
                android:text="@string/about_stego_" />

            <TextView
                style="@style/h2"
                android:text="@string/about_version" />

            <TextView
                android:id="@+id/about_version"
                style="@style/p" />

            <TextView
                style="@style/h2"
                android:text="@string/about_project_home" />

            <TextView
                style="@style/p_link"
                android:id="@+id/about_project_home"
                android:text="@string/about_project_home_" />

            <TextView
                style="@style/h2"
                android:text="@string/about_license" />

            <TextView
                style="@style/p"
                android:text="@string/about_license_" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="6dip"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:id="@+id/about_license_holder" />

            <TextView
                style="@style/p"
                android:text="@string/about_lovingly_" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>